* Move DatafeedTimingStats deleting logic to JobDataDeleter class * Use DeleteByQueryAction to delete DatafeedTimingStats